Implemented Gemini API and created Data Access Interface